--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -202,6 +202,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ex 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "roteiro:\n",
+    "  atenas:\n",
+    "    prompt: \"Liste 3 pontos turísticos de Atenas, o número anual de visitantes e uma breve descrição de cada um. Faça com que a resposta seja um json. Os visitantes anuais são um número sem ponto ou vírgula. Evite o fórum romano. Exemplo: nome:acropole, visitantes_anuais:320000, desc:antigo sitio\"\n",
+    "  roma:\n",
+    "    prompt: \"Liste 3 pontos turísticos de Roma, o número anual de visitantes e uma breve descrição de cada um. Faça com que a resposta seja um json. Os visitantes anuais são um número sem ponto ou vírgula. Evite o fórum romano. Exemplo: nome:acropole, visitantes_anuais:320000, desc:antigo sitio\"\n",
+    " \n",
+    "'''\n",
+    "\n",
+    "\n",
+    "with open('roteiro.yml', 'r') as f:\n",
+    "    roteiro = yaml.safe_load(f)\n",
+    "\n",
+    "# Definir a API do Gemini\n",
+    "model = genai.GenerativeModel(\"gemini-1.5-flash\")\n",
+    "\n",
+    "responseList = []\n",
+    "for cidade, prompt in roteiro['roteiro'].items():\n",
+    "    response = model.generate_content(prompt['prompt'])\n",
+    "    entrada = response.text\n",
+    "    entrada = entrada.replace(\"```json\", \"\" , 1)\n",
+    "    entrada = entrada.replace(\"```\", \"\" , 1)\n",
+    "    entrada = entrada.replace(\"\\n\",\"\")\n",
+    "    entrada = entrada.replace(\" \",\"\", 4)\n",
+    "\n",
+    "\n",
+    "    responseList.append(entrada)\n",
+    "    print(entrada)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dados = []\n",
+    "\n",
+    "\n",
+    "json_data_atenas = json.loads(responseList[0])\n",
+    "dados.append(json_data_atenas)\n",
+    "\n",
+    "json_data_roma = json.loads(responseList[1])\n",
+    "dados.append(json_data_roma)\n",
+    "\n",
+    "print(json_data_atenas)\n",
+    "print(json_data_roma)\n",
+    "print(dados)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "df = pd.DataFrame(dados[0])\n",
+    "\n",
+    "df['cidade'] = 'Atenas'\n",
+    "\n",
+    "df2 = pd.DataFrame(dados[1])\n",
+    "df2['cidade'] = 'Roma'\n",
+    "\n",
+    "df_final = pd.concat ([df, df2])\n",
+    "print(df_final)\n",
+    "\n",
+    "\n",
+    "# Plotar o gráfico de barras horizontais\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "cores = {'Roma': 'red', 'Atenas': 'blue'}  # Define cores para cada cidade\n",
+    "for cidade in df_final['cidade'].unique():\n",
+    "  plt.barh(df_final.loc[df_final['cidade'] == cidade, 'nome'], df_final.loc[df_final['cidade'] == cidade, 'visitantes_anuais'],\n",
+    "            label=cidade, color=cores.get(cidade, 'gray'))\n",
+    "plt.xlabel('Número de Visitantes (em milhões)')\n",
+    "plt.ylabel('Pontos Turísticos')\n",
+    "plt.title('Número de visitantes por ponto turístico')\n",
+    "plt.legend(loc='best')\n",
+    "plt.xticks([0, 1000000, 2000000, 3000000, 4000000, 5000000, 6000000, 7000000, 8000000, 9000000, 10000000], ['0', '1M', '2M', '3M', '4M', '5M', '6M', '7M', '8M', '9M', '10M'])\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
